--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hain-plugin-chrome-bookmarks",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "hain plugin to search your chrome bookmarks",
   "keywords": [
     "hain0"
@@ -14,7 +14,11 @@
   "author": "Varun Ramesh",
   "license": "MIT",
   "hain": {
-    "usage": "type the name of any of your chrome bookmarks",
-    "icon": "#fa fa-bookmark"
+    "usage": "search any of your chrome bookmarks",
+    "icon": "#fa fa-bookmark-o"
+  },
+  "dependencies": {
+    "favicon": "0.0.2",
+    "request": "^2.69.0"
   }
 }
