--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hain-plugin-chrome-bookmarks",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "hain plugin to search your chrome bookmarks",
   "keywords": [
     "hain0"
@@ -14,13 +14,14 @@
   "author": "Varun Ramesh",
   "license": "MIT",
   "hain": {
-    "prefix": "/b",
+    "prefix": "/b ",
     "usage": "/b any chrome bookmark",
     "redirect": "/b ",
     "icon": "#fa fa-bookmark-o"
   },
   "dependencies": {
     "favicon": "0.0.2",
+    "fuzzaldrin-plus": "^0.3.1",
     "request": "^2.69.0"
   }
 }
